fix the alignment of the top links

--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,9 @@
 
 ul.navigation{
     list-style: none;
-    margin:0px;
+    margin:0px auto;
     padding:0px;
+    width:550px;
 }
 ul.navigation li{
     display: inline;
